# miraveja-protos

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.yml  protolint.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
protos/common/v0/: greeter.proto
protos/model/v1/: image_caption.proto  image_embeddings.proto  image_generation.proto  image_safety.proto  image_tagging.proto  image_title.proto  post_text.proto  text_embeddings.proto
scripts/: dry_run_python.sh  generate_python.sh
